# url-shortener

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml
migrations/: 20230914193724_init.down.sql  20230914193724_init.up.sql
src/: error.rs  main.rs  model.rs  prelude.rs
src/service/: error.rs  link.rs  mod.rs  prelude.rs
src/shortened_url/: builder.rs  mod.rs
src/web/: error.rs  mod.rs  prelude.rs
src/web/api/: error.rs  links.rs  mod.rs  prelude.rs
