[package]
name = "backend_challenge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = ">= 1.0.48"
tokio = { version = ">= 1.32.0", features = ["full"] }
axum = ">= 0.6.20"
serde = { version = ">= 1.0.188", features = ["derive"] }
serde_json = ">= 1.0.107"
sqlx = { version = ">= 0.7.1", features = ["postgres", "runtime-tokio-rustls", "time", "uuid", "macros"] }
time = ">= 0.3.28"
dotenvy = ">= 0.15.7"
url = { version = ">= 2.4.1", features = ["serde"] }

[dev-dependencies]
anyhow = ">= 1.0.75"

[profile.dev.package.sqlx-macros]
opt-level = 3
